extra space bug fixed

--- a/src/Styles/Home.scss
+++ b/src/Styles/Home.scss
@@ -229,8 +229,8 @@ main {
     margin-top: 0vh !important;
   }
   .content {
-    justify-content: flex-start;
-    width: 100%;
+    margin-bottom: 40px;
+    width: 92%;
   }
   .project_card {
     h2 {
@@ -244,7 +244,7 @@ main {
     border-radius: 0;
     left: 0;
     p {
-      font-size: 12px !important;
+      font-size: 10px !important;
     }
   }
   .heading {
